Minor, fix some z-index menu issues (see D3355).

--- a/webroot/rsrc/css/aphront/phabricator-nav-view.css
+++ b/webroot/rsrc/css/aphront/phabricator-nav-view.css
@@ -12,11 +12,11 @@
   left: 0;
   bottom: 0;
 
-
   overflow-y: auto;
   overflow-x: hidden;
 
   white-space: nowrap;
+  z-index: 3;
 }
 
 .phabricator-nav-app {
@@ -24,7 +24,6 @@
   background: #262b2e;
   border-right: 1px solid #222222;
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
-  z-index: 6;
 }
 
 .device-desktop .phabricator-nav-app {
@@ -52,7 +51,7 @@
   left: 327px;
   width: 7px;
   bottom: 0;
-  z-index: 5;
+  z-index: 4;
 
   cursor: col-resize;
   background: #f5f5f5;
@@ -166,7 +165,7 @@ a.phabricator-nav-app-button-collapse {
   left: 0;
   bottom: 0;
   padding: 4px;
-  z-index: 7;
+  z-index: 4;
   background: #44494d;
   line-height: 14px;
   border-top: 1px solid #222222;
